Further implementation of shader hotloading. Pixel shaders now load from a file.

--- a/OculusFramework/OculusFramework.vcxproj.filters
+++ b/OculusFramework/OculusFramework.vcxproj.filters
@@ -40,5 +40,8 @@
     <FxCompile Include="simplevs.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="simpleps.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
