--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -95,6 +95,11 @@
     <ClInclude Include="src\Win32_RoomTiny_ExampleFeatures.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="simpleps.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="simplevs.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
