--- a/OculusFramework/OculusFramework-VS2015.vcxproj
+++ b/OculusFramework/OculusFramework-VS2015.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="src\DDSTextureLoader.cpp" />
     <ClCompile Include="src\scene.cpp" />
+    <ClCompile Include="src\sphere.cpp" />
     <ClCompile Include="src\terrain.cpp" />
     <ClCompile Include="src\Win32_DX11AppUtil.cpp" />
     <ClCompile Include="src\Win32_RoomTiny_Main.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="src\libovrwrapper.h" />
     <ClInclude Include="src\PlatformHelpers.h" />
     <ClInclude Include="src\scene.h" />
+    <ClInclude Include="src\sphere.h" />
     <ClInclude Include="src\terrain.h" />
     <ClInclude Include="src\Win32_DX11AppUtil.h" />
     <ClInclude Include="src\Win32_RoomTiny_AppRender.h" />
@@ -114,6 +116,18 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
     </FxCompile>
     <FxCompile Include="simplevs.hlsl">
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="sphereps.hlsl">
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="spherevs.hlsl">
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
