--- a/OculusFramework/OculusFramework-VS2015.vcxproj
+++ b/OculusFramework/OculusFramework-VS2015.vcxproj
@@ -89,6 +89,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\DDSTextureLoader.cpp" />
+    <ClCompile Include="src\farmhash.cpp" />
+    <ClCompile Include="src\resourcemanager.cpp" />
     <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\sphere.cpp" />
     <ClCompile Include="src\terrain.cpp" />
@@ -99,8 +101,10 @@
     <ClInclude Include="src\dds.h" />
     <ClInclude Include="src\DDSTextureLoader.h" />
     <ClInclude Include="src\DirectXHelpers.h" />
+    <ClInclude Include="src\farmhash.h" />
     <ClInclude Include="src\libovrwrapper.h" />
     <ClInclude Include="src\PlatformHelpers.h" />
+    <ClInclude Include="src\resourcemanager.h" />
     <ClInclude Include="src\scene.h" />
     <ClInclude Include="src\sphere.h" />
     <ClInclude Include="src\terrain.h" />
