--- a/OculusFramework/OculusFramework.vcxproj
+++ b/OculusFramework/OculusFramework.vcxproj
@@ -49,8 +49,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;NOMINMAX;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -61,6 +60,8 @@
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
       <MinimalRebuild>false</MinimalRebuild>
       <AdditionalOptions>/Bt+ %(AdditionalOptions)</AdditionalOptions>
+      <PrecompiledHeaderFile>auto_pch.h</PrecompiledHeaderFile>
+      <ForcedIncludeFiles>auto_pch.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -97,6 +98,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="auto_pch.h" />
     <ClInclude Include="src\d3dhelper.h" />
     <ClInclude Include="src\d3dresourcemanagers.h" />
     <ClInclude Include="src\dds.h" />
@@ -113,6 +115,10 @@
     <ClInclude Include="src\Win32_DX11AppUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="auto_pch.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">auto_pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="src\d3dhelper.cpp" />
     <ClCompile Include="src\d3dresourcemanagers.cpp" />
     <ClCompile Include="src\DDSTextureLoader.cpp" />
